--- a/theme/page/controlPanel/status/applicationTrafficAnalyzer.less
+++ b/theme/page/controlPanel/status/applicationTrafficAnalyzer.less
@@ -2,6 +2,14 @@
 @import (reference) "../../../__vars__";
 
 .page-application-traffic-analyzer {
+    &__data-refresh-control-button {
+        border-color: transparent;
+    }
+
+    .traffic-table__group-label {
+        background: @dt__grey4;
+    }
+
     .groupset-data {
         color: @dt__grey9;
     }
