(fix) theme/component/ndm-header-3.7.40: apply additional styles to the search input only if dark theme is enabled

--- a/theme/component/ndm-header-3.7.40.less
+++ b/theme/component/ndm-header-3.7.40.less
@@ -2,7 +2,7 @@
 @import (reference) "../__ndwVars__";
 @import (reference) "../__mixins__";
 
-.d-header {
+.ndm-layout--dark-theme .d-header {
     &__lodge-bar {
         &__right-column {
             background-color: @dt__header-background;
