(feat.) allow to display RSSI value next to the signal bars for wireless clients

--- a/theme/extensionOptions.less
+++ b/theme/extensionOptions.less
@@ -55,11 +55,12 @@
     width: 100%;
 }
 
+.show-rssi-value-form,
 .replace-textarea-cursor-form {
     .__mixin__flex-container(row);
 
     margin-top: @new-gap-sm;
-    margin-bottom: @new-gap-sm;
+    margin-bottom: @new-gap-xs;
 }
 
 .switchports-template {
