--- a/theme/hideUiExtensions-general.less
+++ b/theme/hideUiExtensions-general.less
@@ -1,6 +1,7 @@
 .show-filter-checkboxes,
 .kdte-filters-toggle,
 .kdte-filters-toolbar,
+.kdte-ui-extension-text,
 .log-link,
 .reboot-link,
 .dsl-diagnostics-link,
