--- a/theme/uiExtensions-3.x.less
+++ b/theme/uiExtensions-3.x.less
@@ -3,6 +3,7 @@
 @import "uiExtensions/wifiClients-filters";
 @import "uiExtensions/devicesList-filters";
 @import "uiExtensions/devicesList-input-filter";
+@import "uiExtensions/devicesList-table";
 @import "uiExtensions/devicesList-wol-button";
 @import "uiExtensions/dashboard-vpn-stat-links";
 @import "uiExtensions/extend-dsl-stats";
