(fix) theme/uiExtensions: do not break devices list table markup when filters are active (@ mobile)

--- a/theme/uiExtensions/devicesList-filters.less
+++ b/theme/uiExtensions/devicesList-filters.less
@@ -155,7 +155,16 @@
 
     .mobile({
         .table_devices-list tr.hidden-table-row {
-            display: flex;
+            position: absolute;
+            bottom: 1px;
+            left: 1px;
+
+            &, & * {
+                font-size: 0 !important;
+                line-height: 0 !important;
+                padding: 0 !important;
+                margin: 0 !important;
+            }
         }
     });
 }
