--- a/theme/page/controlPanel/networkRules/internetFilter.less
+++ b/theme/page/controlPanel/networkRules/internetFilter.less
@@ -10,6 +10,8 @@
 }
 
 .page-internet-filter {
+    background: @dt__grey4;
+
     .content-filter {
         .content-filter__unavailable-warning {
             &--loading {
