(fix) theme/: fix menu footer position @ mobile

--- a/theme/__vars__.less
+++ b/theme/__vars__.less
@@ -1,6 +1,7 @@
 @import (reference) "__ndwVars__";
 
 @dt__header-background: #11364d;
+@dt__search-background: lighten(#11364d, 5%);
 
 @dt__white-text: #D4D7D6;
 @dt__gray-text: #a4a7a6;
