(chore) change menu background color @ mobile

--- a/theme/component/ndm-menu-3_x-gray.less
+++ b/theme/component/ndm-menu-3_x-gray.less
@@ -17,7 +17,7 @@
         });
 
         .mobile({
-            background-color: darken(@blue-main, 20%);
+            background-color: @dt__search-background;
         });
     }
 
@@ -25,7 +25,6 @@
         .mobile({
             width: calc(~"100% + 8px");
             background-color: @dt__search-background;
-            padding: 8px 0;
         });
     }
 
