(fix) fix 'Show filters' checkbox description color if dark theme is disabled

--- a/theme/uiExtensions-general.less
+++ b/theme/uiExtensions-general.less
@@ -90,13 +90,15 @@
             }
         }
 
-        .form__cell-note {
-            color: @dt__white-text !important;
-        }
-
         .description {
             min-width: unset;
         }
+    }
+}
+
+.ndm-layout--dark-theme .kdte-filters-toggle {
+    .ndm-checkbox .form__cell-note {
+        color: @dt__white-text !important;
     }
 }
 
