--- a/theme/uiExtensions/devicesList-filters.less
+++ b/theme/uiExtensions/devicesList-filters.less
@@ -27,7 +27,6 @@
 
                 .description {
                     min-width: unset;
-                    color: @dt__white-text
                 }
 
                 .checkbox {
@@ -40,6 +39,12 @@
                 }
             }
         }
+    }
+}
+
+.ndm-layout--dark-theme .ndm-page-header .devices-lists__filter-toggle {
+    .ndm-checkbox .description {
+        color: @dt__white-text;
     }
 }
 
