--- a/theme/uiExtensions/devicesList-filters.less
+++ b/theme/uiExtensions/devicesList-filters.less
@@ -120,7 +120,7 @@
             .mobile({
                 position: absolute;
                 flex-direction: column;
-                top: 24px;
+                bottom: 0;
                 padding-top: 0;
                 left: 0;
 
