(fix) theme/.../portForwarding: fix 'ip static' rule schedule thumbnail positioning

--- a/theme/theme-3.x.less
+++ b/theme/theme-3.x.less
@@ -24,6 +24,7 @@
 
 @import "page/controlPanel/networkRules/netFilter"; // < 3.8
 @import "page/controlPanel/networkRules/internetFilter"; // >= 3.8
+@import "page/controlPanel/networkRules/portForwarding";
 
 @import "page/controlPanel/telephony/lines";
 @import "page/controlPanel/telephony/callHistory";
