(fix) *: fix styles for the route tools (IP lookup, import popup) in 2.x firmware

--- a/theme/theme-2.x.less
+++ b/theme/theme-2.x.less
@@ -20,6 +20,7 @@
 @import "page/controlPanel/myNetwork/wifiSystem";
 
 @import "page/controlPanel/networkRules/netFilter";
+@import "page/controlPanel/networkRules/portForwarding";
 
 @import "page/controlPanel/apps";
 
