--- a/theme/uiExtensions-2.x.less
+++ b/theme/uiExtensions-2.x.less
@@ -3,6 +3,7 @@
 @import "uiExtensions/devicesList-wol-button";
 @import "uiExtensions/devicesList-input-filter";
 @import "uiExtensions/devicesList-filters";
+@import "uiExtensions/routes-tools";
 
 // 2.x-specific overloads for styles in `uiExtensions/devicesList-filters`
 .page-devices-list {
