(fix) *: fix styles for the route tools (IP lookup) in 2.x firmware

--- a/theme/uiExtensions/routes-tools.less
+++ b/theme/uiExtensions/routes-tools.less
@@ -62,6 +62,14 @@
         &-label {
             margin-right: @new-gap-sm;
         }
+
+        &--2_x {
+            align-items: center;
+
+            .form__cell {
+                height: auto !important;
+            }
+        }
     }
 }
 
