(chore) theme/...: fix background color for other loader overlays

--- a/theme/page/controlPanel/myNetwork/devicesList.less
+++ b/theme/page/controlPanel/myNetwork/devicesList.less
@@ -18,4 +18,10 @@
     .__hint-text {
         color: @dt__grey9;
     }
+
+    &__device-popup {
+        &__loader {
+            background-color: @dt__grey4;
+        }
+    }
 }
