--- a/theme/theme-3.x.less
+++ b/theme/theme-3.x.less
@@ -73,6 +73,7 @@
 @import "component/ndm-policy-select";
 @import "component/ndm-popup-small";
 @import "component/ndm-ports-range";
+@import "component/ndm-pppoe-sniffer";
 @import "component/ndm-radio";
 @import "component/ndm-radio-buttons";
 @import "component/ndm-schedule-draw";
