(chore) theme/component/ndm-control-footer.less: fix 'Cancel' button border color

--- a/theme/component/ndm-control-footer.less
+++ b/theme/component/ndm-control-footer.less
@@ -25,6 +25,7 @@
         &__cancel {
             color: @dt__light-blue-text;
             background-color: @dt__grey4;
+            border-color: @dt__grey6;
 
             &:hover {
                 background-color: @dt__grey6;
