--- a/theme/theme-general.less
+++ b/theme/theme-general.less
@@ -79,6 +79,12 @@ th {
 
 .empty-list {
     color: @dt__white-text !important;
+    border-top-color: @dt__grey9;
+    border-bottom-color: @dt__grey9;
+}
+
+hr.hr-light-blue {
+    background-color: @dt__grey9;
 }
 
 .accordion-link,
