--- a/theme/theme-3.x.less
+++ b/theme/theme-3.x.less
@@ -57,6 +57,7 @@
 @import "component/ndm-fs-browser";
 @import "component/ndm-gauge";
 @import "component/ndm-iface-order";
+@import "component/ndm-iface-ttl";
 @import "component/ndm-input-3.x.less";
 @import "component/ndm-input-autocomplete";
 @import "component/ndm-input-selectbox";
