--- a/theme/theme-3.x.less
+++ b/theme/theme-3.x.less
@@ -64,6 +64,7 @@
 @import "component/ndm-input-drop";
 @import "component/ndm-input-file";
 @import "component/ndm-input-filter";
+@import "component/ndm-isp-general-properties";
 @import "component/ndm-help";
 @import "component/ndm-layout";
 @import "component/ndm-menu-3_x-gray";
