(fix) theme/.../policies.less: fix rate limit icons color

--- a/theme/page/controlPanel/myInternet/policies.less
+++ b/theme/page/controlPanel/myInternet/policies.less
@@ -97,6 +97,11 @@
         th.table__col-1 {
             z-index: 1 !important;
         }
+
+        .icon.icon--txbytes-arrow,
+        .icon.icon--rxbytes-arrow {
+            .__mixin__convert-color-to-dt__white-text();
+        }
     }
 
     .policy-consumers-list__consumer-label {
