(chore) theme/component/ndm-selectbox-filter.less: fix scrollbar thumb & background colors (WebKit-only)

--- a/theme/component/ndm-selectbox-filter.less
+++ b/theme/component/ndm-selectbox-filter.less
@@ -23,4 +23,12 @@
             color: @dt__whiter-text;
         }
     }
+
+    ::-webkit-scrollbar-thumb {
+        background-color: @dt__grey7 !important;
+    }
+
+    ::-webkit-scrollbar-track {
+        background-color: @dt__grey5 !important;
+    }
 }
