(chore) theme/.../internetFilter.less: remove border from the public preset profiles table header

--- a/theme/page/controlPanel/networkRules/internetFilter.less
+++ b/theme/page/controlPanel/networkRules/internetFilter.less
@@ -67,4 +67,10 @@
             }
         }
     }
+
+    ndm-profiles-table {
+        .ndm-table thead {
+            border-bottom: none;
+        }
+    }
 }
