(fix) theme/.../devicesList.less: fix traffic priority indicator color

--- a/theme/page/controlPanel/myNetwork/devicesList.less
+++ b/theme/page/controlPanel/myNetwork/devicesList.less
@@ -5,6 +5,7 @@
     .table-devices-list {
         .__mixin__no-box-shadow-table();
 
+        td.table__col--5 div.traffic-priority,
         .via-mws-msg {
             color: @dt__grey9;
         }
