--- a/theme/component/ndm-selectbox-with-details.less
+++ b/theme/component/ndm-selectbox-with-details.less
@@ -3,5 +3,10 @@
 .ndm-select-with-details {
     &__details-container {
         background-color: @dt__grey6;
+
+        .option-details__title,
+        .option-details__description {
+            color: @dt__white-text;
+        }
     }
 }
