(chore) theme/.../ndm-input-3.x.less: lighter placeholder text color

--- a/theme/component/ndm-input-3.x.less
+++ b/theme/component/ndm-input-3.x.less
@@ -17,6 +17,10 @@
             -webkit-box-shadow: inset 0 0 0 50px @dt__grey6;
             -webkit-text-fill-color: @dt__white-text;
         }
+
+        input::placeholder {
+            color: @dt__gray-text;
+        }
     }
 
     .form__cell-action-link {
