(fix) theme/.../wifiMonitor.less: change time labels text color

--- a/theme/page/controlPanel/status/wifiMonitor.less
+++ b/theme/page/controlPanel/status/wifiMonitor.less
@@ -30,6 +30,10 @@
     }
 }
 
+.wifi-utilization__time-label {
+    color: @dt__white-text;
+}
+
 div.wifi-utilization__cell--loading,
 div.page-wifi-analyzer__channel-row--loading {
     background: @dt__grey8 !important;
