(chore) theme/.../: fix page & popup header color

--- a/theme/theme-3.x.less
+++ b/theme/theme-3.x.less
@@ -72,7 +72,9 @@
 @import "component/ndm-modal";
 @import "component/ndm-mws-nodes";
 @import "component/ndm-page";
+@import "component/ndm-page-header";
 @import "component/ndm-policy-select";
+@import "component/ndm-popup-header";
 @import "component/ndm-popup-small";
 @import "component/ndm-ports-range";
 @import "component/ndm-pppoe-sniffer";
