(chore) theme/.../system: fix NTP section style

--- a/theme/page/controlPanel/control/system.less
+++ b/theme/page/controlPanel/control/system.less
@@ -98,6 +98,12 @@
             }
         }
     }
+
+    .system__system-settings-section__ntp-table {
+        th {
+            background-color: transparent !important;
+        }
+    }
 }
 
 .system__components-popup {
