(chore) theme/theme-general.less: fix subform border style

--- a/theme/theme-general.less
+++ b/theme/theme-general.less
@@ -105,3 +105,7 @@ hr.hr-light-blue {
 .form__cell-note {
     color: @dt__gray-text;
 }
+
+.form .form--sub {
+    border-left-color: @dt__grey6;
+}
