--- a/theme/theme-3.x.less
+++ b/theme/theme-3.x.less
@@ -11,6 +11,7 @@
 @import "page/controlPanel/myInternet/wired";
 @import "page/controlPanel/myInternet/dsl";
 @import "page/controlPanel/myInternet/modems";
+@import "page/controlPanel/myInternet/wifiClient";
 @import "page/controlPanel/myInternet/policies";
 @import "page/controlPanel/myInternet/otherConnections";
 @import "page/controlPanel/myInternet/sms";
