--- a/theme/__mixins__.less
+++ b/theme/__mixins__.less
@@ -188,3 +188,15 @@
         background-repeat: repeat-x;
     }
 }
+
+// target: #51b5d0 (@dt__cyan-blue-text)
+@trash-icon-filter: brightness(0.01) invert(67%) sepia(100%) saturate(409%) hue-rotate(159deg) brightness(88%) contrast(82%) brightness(1.2);
+
+.__mixin__toolbar-button(@size: @new-gap-md) {
+    filter: @trash-icon-filter;
+    opacity: 0.65;
+
+    &:hover {
+        opacity: 1;
+    }
+}
