--- a/theme/page/controlPanel/myInternet/policies.less
+++ b/theme/page/controlPanel/myInternet/policies.less
@@ -49,8 +49,12 @@
         color: @dt__white-text !important;
         background: @dt__grey5 !important;
 
+        &--multipath-mode {
+            color: @dt__gray-text;
+        }
+
         &--selected {
-            background-color: @dt__grey7 !important;
+            background-color: @dt__grey6 !important;
         }
 
         &--droppable {
@@ -62,10 +66,15 @@
         }
     }
 
+    .policies-list__rename-policy-icon,
+    .policies-list__delete-policy-icon {
+        .__mixin__toolbar-button();
+    }
+
     .policy-name-editor {
         padding-right: 5px;
         left: 0;
-        background: @dt__grey5 !important;
+        background: @dt__grey6 !important;
     }
 
     .policy-editor-controls__btn-label {
