(task) uiExtensions/kvasUi: update code related to the connection settings block; theme/kvas-ui: add styles file

--- a/theme/uiExtensions-3.x.less
+++ b/theme/uiExtensions-3.x.less
@@ -10,3 +10,5 @@
 @import "uiExtensions/extend-dsl-stats";
 @import "uiExtensions/routes-tools";
 @import "uiExtensions/point-to-point-section";
+
+@import "kvas-ui/kvas-ui";
