(fix) theme/.../segments.less: fix channel selectbox details container style

--- a/theme/page/controlPanel/myNetwork/segments.less
+++ b/theme/page/controlPanel/myNetwork/segments.less
@@ -33,3 +33,11 @@
         color: @dt__white-text;
     }
 }
+
+.channel-selectbox {
+    .ndm-select-with-details {
+        &__details-container {
+            background-color: transparent;
+        }
+    }
+}
