(fix) add styles for the 'Fail-Safe mode' feature

--- a/theme/page/controlPanel/control/system.less
+++ b/theme/page/controlPanel/control/system.less
@@ -99,6 +99,10 @@
         }
     }
 
+    .system__fail-safe-settings__toggle-container span {
+        color: @dt__white-text;
+    }
+
     .system__system-settings-section__ntp-table {
         th {
             background-color: transparent !important;
