--- a/theme/theme-3.x.less
+++ b/theme/theme-3.x.less
@@ -54,6 +54,8 @@
 @import "component/ndm-control-footer";
 @import "component/ndm-edit-in-place";
 @import "component/ndm-eula";
+@import "component/ndm-fail-safe-intro-modal";
+@import "component/ndm-fail-safe-notifier";
 @import "component/ndm-feature-notice";
 @import "component/ndm-fs-browser";
 @import "component/ndm-gauge";
