(feat.) add toolbar on the 'Port forwarding' page

--- a/theme/uiExtensions-3.x.less
+++ b/theme/uiExtensions-3.x.less
@@ -10,3 +10,4 @@
 @import "uiExtensions/extend-dsl-stats";
 @import "uiExtensions/routes-tools";
 @import "uiExtensions/point-to-point-section";
+@import "uiExtensions/port-forwarding-toolbar";
