(fix) theme/.../system.less: fix 'Fail-safe' mode toggle label

--- a/theme/page/controlPanel/control/system.less
+++ b/theme/page/controlPanel/control/system.less
@@ -131,6 +131,10 @@
     }
 }
 
+.system__fail-safe-settings__toggle-container span {
+    color: @dt__white-text;
+}
+
 .sysmode-list {
     .sysmode-icon {
         filter: brightness(1.2);
