(feat.) add toolbar to the 'Port forwarding' page (in progress)

--- a/theme/uiExtensions/port-forwarding-toolbar.less
+++ b/theme/uiExtensions/port-forwarding-toolbar.less
@@ -3,6 +3,12 @@
 @import "../__ndwVars__";
 
 .port-forwarding-toolbar {
+    padding-top: @new-unit;
+
+    .ndm-details .form__row {
+        min-height: unset;
+    }
+
     &__row {
         .__mixin__flex-row(center);
 
