(fix) theme/: override background color of the selected selectbox option

--- a/theme/component/ndm-selectbox-filter.less
+++ b/theme/component/ndm-selectbox-filter.less
@@ -22,6 +22,14 @@
         &__handle {
             color: @dt__whiter-text;
         }
+
+        &--selected {
+            background-color: @dt__grey8;
+
+            &:hover a {
+                background-color: @dt__grey9;
+            }
+        }
     }
 
     ::-webkit-scrollbar-thumb {
