--- a/theme/component/ndm-selectbox.less
+++ b/theme/component/ndm-selectbox.less
@@ -16,6 +16,11 @@
         background: @dt__grey6;
     }
 
+    .dropdown .sb-container .sb-dropdown .sb-item-active,
+    .dropdown .sb-container .sb-dropdown .sb-item-active a {
+        background: @dt__grey8;
+    }
+
     .dropdown .sb-container .sb-dropdown .sb-item a:hover {
         background: @dt__grey9 !important;
     }
