--- a/theme/component/ndm-selectbox2.less
+++ b/theme/component/ndm-selectbox2.less
@@ -19,7 +19,10 @@
     }
 
     &--selected {
-        &:hover {
+        background: @dt__grey8;
+
+        &:hover,
+        &:hover a {
             background: @dt__grey9;
         }
     }
