(fix) theme/.../administrator-3_x.less: fix tags table header style

--- a/theme/page/controlPanel/control/administrator-3_x.less
+++ b/theme/page/controlPanel/control/administrator-3_x.less
@@ -4,6 +4,7 @@
     }
 }
 
+.ndm-user-settings__popup form.administrator_editor_form,
 form.administrator_editor_form {
     .user-tags__header {
         background-color: @dt__grey7;
