(fix) theme/.../devicesList.less: fix policy schedule thumb positioning

--- a/theme/page/controlPanel/myNetwork/devicesList.less
+++ b/theme/page/controlPanel/myNetwork/devicesList.less
@@ -25,4 +25,9 @@
             background-color: @dt__grey4;
         }
     }
+
+    .ndm-schedule-select__thumb-container {
+        position: relative;
+        left: 20px;
+    }
 }
